<resources>
    <string name="app_name">HangIN</string>
    <string name="or">or</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email1">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">create account</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="image_gardient">image</string>
    <string name="sign_in">SIGN IN</string>
    <string name="facebook">Facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="google">Google</string>
    <string name="sign_up">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="bookings">bookings</string>
    <string name="menu">Menu</string>
    <string name="nearby">Nearby</string>
    <string name="image">image</string>
    <string name="working_place_name">Working Place Name</string>
    <string name="address_will_write_here">Address will write here</string>
</resources>
