<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".models.login">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <ImageView
        android:id="@+id/im_login"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/img_login_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_gardient"/>


    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/gardient"
        android:alpha="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/hang_in_image"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/img_hangin_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/email_Edit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/style_text"
        android:drawableEnd="@drawable/user"
        android:hint="@string/email"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/hang_in_image"
        android:importantForAutofill="no" />



    <EditText
        android:id="@+id/password_edit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/style_text"
        android:drawableEnd="@drawable/password"
        android:hint="@string/password"
        android:textSize="16sp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/email_Edit">
    </EditText>

    <Button
        android:id="@+id/forget_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forget_your_password"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:background="#00FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/password_edit" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/style_button"
        android:text="@string/sign_in"
        android:textColor="#4eaefd"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/forget_password" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#FFF"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="@+id/or_view"
        app:layout_constraintBottom_toBottomOf="@id/or_view"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/or_view"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:background="#FFF"
        app:layout_constraintTop_toTopOf="@id/or_view"
        app:layout_constraintStart_toEndOf="@id/or_view"
        app:layout_constraintBottom_toBottomOf="@id/or_view"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        />

    <TextView
        android:id="@+id/or_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/or"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <Button
        android:id="@+id/facebook_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button"
        android:drawableStart="@drawable/facebook"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:paddingStart="20dp"
        android:textSize="16sp"
        android:textColor="#3b5998"
        app:layout_constraintTop_toBottomOf="@id/or_view"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/google_button"
        />

    <Button
        android:id="@+id/google_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:textAllCaps="false"
        android:paddingStart="20dp"
        android:background="@drawable/style_button"
        android:drawableStart="@drawable/google"
        android:text="@string/google"
        android:textSize="16sp"
        android:textColor="#FF0000"
        app:layout_constraintTop_toBottomOf="@id/or_view"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/facebook_button"
        />


    <TextView
        android:id="@+id/dont_have_account_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#FFF"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/facebook_button"
        >

    </TextView>

    <Button
        android:id="@+id/sign_up_button"
        android:gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:text="@string/sign_up"
        android:textColor="#FFF"
        android:background="#00FFFFFF"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/dont_have_account_txt"
        app:layout_constraintStart_toEndOf="@+id/dont_have_account_txt"
        >

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>
